# libclang-tools

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  main.cpp
Apps/: CMakeLists.txt  Complete.cpp  Diagnose.cpp  FunctionNameCheck.cpp  ideas.txt
CMake/: Compiler.cmake  CompilerFlags.cmake  GetClang.cmake  LibSearch.cmake
ClangTools/: Diagnostic.hpp  SourceLocations.hpp  String.hpp  TranslationUnit.hpp
Examples/: eComplete.cpp  eDiagnose.cpp  eFunctions.cpp
Presentation/: CMakeLists.txt  libclang.tex
